--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@ p {
     padding: 25px; 
     width: 395px;
     height: 250px;
-    background-color: #ffffff;
+    background-color: #ebebeb;
     float: left;
 }
 
