--- a/style.css
+++ b/style.css
@@ -74,12 +74,13 @@ p {
 }
 #section {
     padding: 25px; 
+    min-height: 300px;
 }
 
 #aside {
     padding: 25px; 
     width: 395px;
-    height: 250px;
+    min-height: 300px;
     background-color: #ebebeb;
     float: left;
 }
